# mllm-playground

./: .gitignore  env.sh  free.ipynb  logit_lens.ipynb  logit_lens_vlm.ipynb  pyproject.toml  structured_output.ipynb  utils.ipynb
files/results/: output.jsonl  output_trf_7b.jsonl
interp/: logit_lens.ipynb  modality_balance.ipynb  structured_output.ipynb
model/: smolvlm2.ipynb  vlm_vanilla.ipynb
results/: output_trf_7b_newcount.jsonl
